--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,5 @@
-@use './theme';
+@import './theme.scss';
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
-
-:root {
-  --font-primary: 'Inter', sans-serif;//$fontPrimary;
-  --color-primary: #bf3939;//theme.$colorPrimary;
-  --color-primary-dark: #8a2828;
-  --color-secondary: #ffffff;
-  --color-black: #000000;
-  --color-bg-primary: #f8f9fa;
-  --color-bg-secondary: #ffffff;
-  --color-text-primary: #151e28;
-  --color-text-secondary: #6c757d;
-}
 
 * {
   box-sizing: border-box;
@@ -20,8 +8,8 @@
 }
 
 body {
-  font-family: var(--font-primary);
-  color: var(--color-text-primary);
+  font-family: $fontPrimary;
+  color: $colorTextPrimary;
 }
 
 a {
