--- a/src/components/Course/Course.scss
+++ b/src/components/Course/Course.scss
@@ -1,3 +1,5 @@
+@import '../../theme.scss';
+
 .Course {
     border-radius: 6px;
     padding: 20px;
@@ -30,7 +32,7 @@
     }
     
     &-Subtitle {
-        color: var(--color-text-secondary);
+        color: $colorTextSecondary;
         font-size: 16px;
         line-height: 150%;
         margin-bottom: 16px;
@@ -39,7 +41,7 @@
     &-Time {
         font-size: 14px;
         font-weight: 700;
-        color: var(--color-primary);
+        color: $colorPrimary;
     }
 }
   
